difficulties added, some layout bugs fixed

--- a/color_game.css
+++ b/color_game.css
@@ -1,5 +1,18 @@
+html {
+	height: 100%;
+}
+
 body {
 	font-family: arial;
+	height: 100%;
+}
+
+.selected {
+	background-color: black;
+}
+
+.selected p {
+	color: white;
 }
 
 .margineless {
@@ -8,7 +21,7 @@ body {
 
 
 #global_container {
-  position: absolute;
+  position: relative;
   top: 50%;
   transform: translateY(-50%);
   width: 100%;
@@ -35,7 +48,7 @@ body {
     display: block;
 }
 
-button {
+#pop_btn {
 	margin: 20px;
 	font-size: 40px;
 	background-color: orange;
@@ -46,11 +59,22 @@ button {
 
 #button_container {
 	text-align: center;
+	position: absolute;
+    top: 50%;
+    width: 100%;
+    transform: translateY(-50%);
+}
+
+#more_global_container {
+	width: 100%;
+	height: 80%;
+	bottom: 0;
 }
 
 header {
 	text-align:center;
 	width: 100%;
+	height: 20%;
 }
 
 .winner h1 {
